# dpreview-data-scraper

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  scrape_log.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/dpreview_scraper/: __init__.py  __main__.py  cli.py  config.py
src/dpreview_scraper/models/: __init__.py  camera.py  review.py  specs.py
src/dpreview_scraper/parsers/: __init__.py  metadata_parser.py  parse_utils.py  product_parser.py  review_parser.py  search_parser.py  specs_parser.py
src/dpreview_scraper/scraper/: archive.py  browser.py  product.py  search.py  stealth.py
src/dpreview_scraper/storage/: __init__.py  progress.py  yaml_writer.py
src/dpreview_scraper/utils/: logging.py  rate_limiter.py
tests/: conftest.py  test_models.py  test_product_parser.py  test_progress.py  test_rate_limiter.py  test_search_parser.py  test_yaml_writer.py
tests/fixtures2/: camera_list.html  product_sample.html
tests/fixtures_last/: camera_list.html  product_sample.html
tests/fixtures_p28/: camera_list.html  product_sample.html
tests/fixtures_p52/: camera_list.html  product_sample.html
tests/fixtures_p53/: camera_list.html  product_sample.html
tests/fixtures_specs/: camera_list.html  product_sample.html
